Creating the Transactions Import Background Service

--- a/.env
+++ b/.env
@@ -78,3 +78,13 @@ PAYPAL_URL=https://api-m.sandbox.paypal.com
 PAYPAL_CLIENT_ID=paypal_client_id
 PAYPAL_CLIENT_SECRET=paypal_client_secret
 PAYPAL_WEBHOOK_ID=get_it_from_webhook_registration
+
+## Iris
+IRIS_API_URL = https://developer.sandbox.irispay.bg/api/8
+IRIS_AGENT_HASH = 
+IRIS_USER_HASH = 
+BANK_BIC = UNCRBGSF
+PLATFORM_IBAN =
+
+#Background-tasks
+IMPORT_TRX_TASK_INTERVAL_MINUTES = 360
