--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@golevelup/nestjs-stripe": "0.3.4",
     "@golevelup/nestjs-webhooks": "0.2.14",
     "@keycloak/keycloak-admin-client": "18.0.0",
-    "@nestjs/axios": "0.1.0",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/cli": "^9.1.8",
     "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
@@ -36,6 +36,7 @@
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/schedule": "^2.2.0",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/terminus": "^9.1.4",
     "@nestjs/websockets": "^9.2.1",
@@ -44,7 +45,9 @@
     "@sendgrid/client": "7.6.2",
     "@sendgrid/mail": "7.6.0",
     "@sentry/node": "6.19.7",
+    "@types/cron": "^2.0.0",
     "aws-sdk": "2.1199.0",
+    "axios": "^1.3.4",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "exceljs": "4.3.0",
@@ -52,7 +55,7 @@
     "helmet": "5.0.2",
     "joi": "17.6.0",
     "keycloak-connect": "18.0.2",
-    "luxon": "3.2.1",
+    "luxon": "^3.3.0",
     "mjml": "4.12.0",
     "nanoid": "3.3.4",
     "nest-keycloak-connect": "1.9.0",
