--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "lint-staged": "11.1.2",
     "nx": "^15.5.1",
     "prettier": "2.6.0",
-    "prisma": "4.3.1",
-    "prisma-dbml-generator": "0.9.1",
+    "prisma": "4.9.0",
+    "prisma-dbml-generator": "^0.10.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
