--- a/.env
+++ b/.env
@@ -86,12 +86,11 @@ PAYPAL_WEBHOOK_ID=get_it_from_webhook_registration
 ##########
 JWT_SECRET_KEY=VerySecretPrivateKey
 
-## Iris
+## Iris Bank Imports ##
+##########
 IRIS_API_URL = https://developer.sandbox.irispay.bg/api/8
-IRIS_AGENT_HASH = 
-IRIS_USER_HASH = 
+IRIS_AGENT_HASH =
+IRIS_USER_HASH =
 BANK_BIC = UNCRBGSF
 PLATFORM_IBAN =
-
-#Background-tasks
-IMPORT_TRX_TASK_INTERVAL_MINUTES = 360
+IMPORT_TRX_TASK_INTERVAL_MINUTES = 60
