--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,12 @@ PAYPAL_WEBHOOK_ID=get_it_from_webhook_registration
 ## Auth ##
 ##########
 JWT_SECRET_KEY=VerySecretPrivateKey
+
+## Iris Bank Imports ##
+##########
+IRIS_API_URL = https://developer.sandbox.irispay.bg/api/8
+IRIS_AGENT_HASH =
+IRIS_USER_HASH =
+BANK_BIC = UNCRBGSF
+PLATFORM_IBAN =
+IMPORT_TRX_TASK_INTERVAL_MINUTES = 60
