updated sentry deps

--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/terminus": "^9.2.2",
     "@nestjs/websockets": "^9.3.12",
-    "@ntegral/nestjs-sentry": "4.0.0",
+    "@ntegral/nestjs-sentry": "^4.0.0",
     "@prisma/client": "4.9.0",
     "@sendgrid/client": "7.6.2",
     "@sendgrid/mail": "7.6.0",
-    "@sentry/node": "6.19.7",
+    "@sentry/node": "^7.46.0",
     "@types/cron": "^2.0.0",
     "aws-sdk": "2.1199.0",
     "class-transformer": "0.5.1",
