--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "luxon": "^3.3.0",
     "mjml": "4.12.0",
     "nanoid": "3.3.4",
-    "nest-keycloak-connect": "1.9.0",
+    "nest-keycloak-connect": "^1.9.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5",
     "stripe": "11.14.0",
