--- a/package.json
+++ b/package.json
@@ -29,25 +29,24 @@
     "@golevelup/nestjs-webhooks": "0.2.14",
     "@keycloak/keycloak-admin-client": "18.0.0",
     "@nestjs/axios": "^2.0.0",
-    "@nestjs/cli": "^9.1.8",
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.2.1",
-    "@nestjs/jwt": "^10.0.1",
-    "@nestjs/platform-express": "^9.2.1",
-    "@nestjs/platform-socket.io": "^9.2.1",
-    "@nestjs/schedule": "^2.2.0",
-    "@nestjs/swagger": "^6.1.4",
-    "@nestjs/terminus": "^9.1.4",
-    "@nestjs/websockets": "^9.2.1",
-    "@ntegral/nestjs-sentry": "4.0.0",
+    "@nestjs/cli": "^9.3.0",
+    "@nestjs/common": "^9.3.12",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.3.12",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/platform-express": "^9.3.12",
+    "@nestjs/platform-socket.io": "^9.3.12",
+    "@nestjs/schedule": "^2.2.1",
+    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/terminus": "^9.2.2",
+    "@nestjs/websockets": "^9.3.12",
+    "@ntegral/nestjs-sentry": "^4.0.0",
     "@prisma/client": "4.9.0",
     "@sendgrid/client": "7.6.2",
     "@sendgrid/mail": "7.6.0",
-    "@sentry/node": "6.19.7",
+    "@sentry/node": "^7.46.0",
     "@types/cron": "^2.0.0",
     "aws-sdk": "2.1199.0",
-    "axios": "^1.3.4",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "exceljs": "4.3.0",
@@ -58,7 +57,7 @@
     "luxon": "^3.3.0",
     "mjml": "4.12.0",
     "nanoid": "3.3.4",
-    "nest-keycloak-connect": "1.9.0",
+    "nest-keycloak-connect": "^1.9.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5",
     "stripe": "11.14.0",
@@ -67,8 +66,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
-    "@nestjs/schematics": "^9.0.4",
-    "@nestjs/testing": "^9.2.1",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.3.12",
     "@nrwl/cli": "^15.5.1",
     "@nrwl/eslint-plugin-nx": "^15.5.1",
     "@nrwl/jest": "^15.5.1",
