added overlay for prod to send contact form mails to info@podkrepi.bg

--- a/manifests/overlays/production/kustomization.yaml
+++ b/manifests/overlays/production/kustomization.yaml
@@ -9,6 +9,7 @@ bases:
 patches:
 - path: manual/keycloak-config.patch.yaml
 - path: manual/deployment.patch.yaml
+- path: manual/sendgrid-config.patch.yaml
 
 images:
 - name: ghcr.io/podkrepi-bg/api
