--- a/.github/workflows/gpt-check.yml
+++ b/.github/workflows/gpt-check.yml
@@ -22,3 +22,5 @@ jobs:
           # MODEL:
           # top_p: 1
           # temperature: 1
+      run: |
+        echo "repository variable : ${{ vars.TEST }}"
