Edit bank donation ref route

--- a/.github/workflows/gpt-check.yml
+++ b/.github/workflows/gpt-check.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: anc95/ChatGPT-CodeReview@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_API_KEY: ${{ vars.OPENAI_API_KEY }}
           # Optional
           # LANGUAGE: Chinese
           # MODEL:
