--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@sendgrid/mail": "7.6.0",
     "@sentry/node": "^7.46.0",
     "@types/cron": "^2.0.0",
-    "aws-sdk": "2.1199.0",
+    "aws-sdk": "^2.1369.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "exceljs": "4.3.0",
@@ -62,7 +62,8 @@
     "rxjs": "7.5.5",
     "stripe": "11.14.0",
     "swagger-ui-express": "4.5.0",
-    "tslib": "2.4.0"
+    "tslib": "2.4.0",
+    "xml2js": "^0.5.0"
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
@@ -83,6 +84,7 @@
     "@types/mjml": "4.7.0",
     "@types/multer": "1.4.7",
     "@types/node": "16.9.1",
+    "@types/xml2js": "^0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "@vegardit/prisma-generator-nestjs-dto": "1.5.1",
