--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       SENDGRID_CONTACTS_URL: ${SENDGRID_CONTACTS_URL?}
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY?}
       STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET?}
-      S3_BUCKET: ${S3_BUCKET?}
+      S3_REGION: ${S3_REGION?}
       S3_ENDPOINT: ${S3_ENDPOINT?}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY?}
       S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY?}
