--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -111,8 +111,8 @@ spec:
                 secretKeyRef:
                   key: secret
                   name: jwt-secret
-            - name: S3_BUCKET
-              value: campaign-files
+            - name: S3_REGION
+              valueFrom: ADD_CONFIGMAP_HERE
             - name: IRIS_API_URL
               value: https://developer.sandbox.irispay.bg/api/8
             - name: BANK_BIC
