set S3_REGION to us-east-1
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -112,7 +112,7 @@ spec:
                   key: secret
                   name: jwt-secret
             - name: S3_REGION
-              valueFrom: ADD_CONFIGMAP_HERE
+              value: us-east-1
             - name: IRIS_API_URL
               value: https://developer.sandbox.irispay.bg/api/8
             - name: BANK_BIC
