--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 
 ## S3 ##
 ########
-S3_REGION=object-store-dev
+S3_REGION=us-east-1
 S3_ENDPOINT=https://cdn-dev.podkrepi.bg
 S3_ACCESS_KEY=s3-access-key
 S3_SECRET_ACCESS_KEY=s3-secret-access-key
