xml2js and aws sdk upgrade (#492)
* upgraded xml2js to 0.5 due to security guidance by dependabot
side changes:
- added it explicitly as dependency
- upgraded aws-sdk due to xml2js

* upgrdaded aws-client to v3. Note: region in config was needed to make it work

* region to be configured for deployment

* formatting

* set S3_REGION to us-east-1

* fix readme

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -111,8 +111,8 @@ spec:
                 secretKeyRef:
                   key: secret
                   name: jwt-secret
-            - name: S3_BUCKET
-              value: campaign-files
+            - name: S3_REGION
+              value: us-east-1
             - name: IRIS_API_URL
               value: https://developer.sandbox.irispay.bg/api/8
             - name: BANK_BIC
