--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       SENDGRID_CONTACTS_URL: ${SENDGRID_CONTACTS_URL?}
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY?}
       STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET?}
-      S3_BUCKET: ${S3_BUCKET?}
+      S3_REGION: ${S3_REGION?}
       S3_ENDPOINT: ${S3_ENDPOINT?}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY?}
       S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY?}
@@ -105,7 +105,14 @@ services:
   stripe-webhook:
     image: stripe/stripe-cli:latest
     restart: always
-    command: ["listen", "--api-key", "${STRIPE_SECRET_KEY}", "--forward-to", "localhost:5010/api/v1/stripe/webhook"]
+    command:
+      [
+        'listen',
+        '--api-key',
+        '${STRIPE_SECRET_KEY}',
+        '--forward-to',
+        'localhost:5010/api/v1/stripe/webhook',
+      ]
 
   ########################################
   ## LOCAL IDENTITY PROVIDER - KEYCLOAK ##
