--- a/.env.example
+++ b/.env.example
@@ -69,6 +69,7 @@ SENDGRID_API_KEY=sendgrid-key
 SENDGRID_SENDER_EMAIL=info@podkrepi.bg
 SENDGRID_INTERNAL_EMAIL=dev@podkrepi.bg
 SENDGRID_CONTACTS_URL=/v3/marketing/contacts
+ADMIN_NOTIFICATION_GROUP = the group that will receive admin notifications
 
 ## Stripe ##
 ############
@@ -94,3 +95,4 @@ IRIS_USER_HASH =
 BANK_BIC = UNCRBGSF
 PLATFORM_IBAN =
 IMPORT_TRX_TASK_INTERVAL_MINUTES = 60
+CHECK_IRIS_CONSENT_TASK_HOUR = 10  -> which hour of the day to run the check at
