added notification env variables for deployment

--- a/.env.example
+++ b/.env.example
@@ -69,7 +69,6 @@ SENDGRID_API_KEY=sendgrid-key
 SENDGRID_SENDER_EMAIL=info@podkrepi.bg
 SENDGRID_INTERNAL_EMAIL=dev@podkrepi.bg
 SENDGRID_CONTACTS_URL=/v3/marketing/contacts
-ADMIN_NOTIFICATION_GROUP = the group that will receive admin notifications
 
 ## Stripe ##
 ############
@@ -89,10 +88,12 @@ JWT_SECRET_KEY=VerySecretPrivateKey
 
 ## Iris Bank Imports ##
 ##########
-IRIS_API_URL = https://developer.sandbox.irispay.bg/api/8
-IRIS_AGENT_HASH =
-IRIS_USER_HASH =
-BANK_BIC = UNCRBGSF
-PLATFORM_IBAN =
-IMPORT_TRX_TASK_INTERVAL_MINUTES = 60
-CHECK_IRIS_CONSENT_TASK_HOUR = 10  -> which hour of the day to run the check at
+IRIS_API_URL=https://developer.sandbox.irispay.bg/api/8
+IRIS_AGENT_HASH=
+IRIS_USER_HASH=
+BANK_BIC=UNCRBGSF
+PLATFORM_IBAN=
+IMPORT_TRX_TASK_INTERVAL_MINUTES=60
+#which hour of the day to run the check for consent
+CHECK_IRIS_CONSENT_TASK_HOUR=10
+BILLING_ADMIN_MAIL=billing_admin@podkrepi.bg
