--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -121,6 +121,10 @@ spec:
               value: BG66UNCR70001524349032
             - name: IMPORT_TRX_TASK_INTERVAL_MINUTES
               value: '60'
+            - name: CHECK_IRIS_CONSENT_TASK_HOUR
+              value: '10'
+            - name: BILLING_ADMIN_MAIL
+              value: billing_admin@podkrepi.bg
             - name: IRIS_AGENT_HASH
               valueFrom:
                 secretKeyRef:
