Add a configuration option for the hotcache ttl. We also have an option to disable it if there is a problem.

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -224,3 +224,7 @@ spec:
                 secretKeyRef:
                   name: paypal-secret
                   key: webhook-id
+            - name: HOTCACHE_TTL
+              value: 30
+            - name: HOTCACHE_ENABLED
+              value: true
