Integrate the nest.js cache manager and replace the homemade hotcache class. It makes the code cleaner as it caches the APIs directly.

--- a/.env.example
+++ b/.env.example
@@ -98,7 +98,6 @@ IMPORT_TRX_TASK_INTERVAL_MINUTES=60
 CHECK_IRIS_CONSENT_TASK_HOUR=10
 BILLING_ADMIN_MAIL=billing_admin@podkrepi.bg
 
-## HotCache ##
+## Cache ##
 ##############
-HOTCACHE_ENABLED=true
-HOTCACHE_TTL=30
+CACHE_TTL=30000
