--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -224,7 +224,5 @@ spec:
                 secretKeyRef:
                   name: paypal-secret
                   key: webhook-id
-            - name: HOTCACHE_TTL
-              value: 30
-            - name: HOTCACHE_ENABLED
-              value: true
+            - name: CACHE_TTL
+              value: 30000
