Increase the default cache time to 60sec.

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -225,4 +225,4 @@ spec:
                   name: paypal-secret
                   key: webhook-id
             - name: CACHE_TTL
-              value: 30000
+              value: '60000'
