--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@golevelup/nestjs-webhooks": "0.2.14",
     "@keycloak/keycloak-admin-client": "18.0.0",
     "@nestjs/axios": "^2.0.0",
+    "@nestjs/cache-manager": "^2.0.1",
     "@nestjs/cli": "^9.3.0",
     "@nestjs/common": "^9.3.12",
     "@nestjs/config": "^2.3.1",
@@ -48,7 +49,7 @@
     "@sentry/node": "^7.46.0",
     "@types/cron": "^2.0.0",
     "aws-sdk": "^2.1369.0",
-    "@nestjs/cache-manager": "^5.2.3",
+    "cache-manager": "^5.2.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "exceljs": "4.3.0",
