--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "joi": "17.6.0",
     "keycloak-connect": "21.0.1",
     "luxon": "^3.3.0",
-    "mjml": "4.12.0",
+    "mjml": "^4.14.1",
     "nanoid": "3.3.4",
     "nest-keycloak-connect": "^1.9.1",
     "reflect-metadata": "0.1.13",
@@ -84,13 +84,13 @@
     "@types/faker": "5.5.9",
     "@types/jest": "29.2.3",
     "@types/luxon": "3",
-    "@types/mjml": "4.7.0",
+    "@types/mjml": "^4.7.1",
     "@types/multer": "1.4.7",
     "@types/node": "16.9.1",
     "@types/xml2js": "^0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
-    "@vegardit/prisma-generator-nestjs-dto": "1.5.1",
+    "@vegardit/prisma-generator-nestjs-dto": "^1.5.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "fishery": "2.2.2",
@@ -123,7 +123,8 @@
   "resolutions": {
     "set-value": "^4.0.1",
     "glob-parent": "^5.1.2",
-    "undici": "^5.8.2"
+    "undici": "^5.8.2",
+    "semver": "^7.5.2"
   },
   "packageManager": "yarn@3.3.0",
   "jest-junit": {
