--- a/manifests/base/sendgrid-config.yaml
+++ b/manifests/base/sendgrid-config.yaml
@@ -6,3 +6,8 @@ data:
   sender-email: info@podkrepi.bg
   internal-notifications-email: qa@podkrepi.bg
   contacts-endpoint: /v3/marketing/contacts
+  marketing-list-id: 90f99c9a-45a1-489d-88ea-77dd2593a670
+  sender-id: '2000909'
+  enable-notifications: 'true'
+
+
