added: env variable for CAMPAIGN_ADMIN_MAIL in deployment config

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -125,6 +125,8 @@ spec:
               value: '10'
             - name: BILLING_ADMIN_MAIL
               value: billing_admin@podkrepi.bg
+            - name: CAMPAIGN_ADMIN_MAIL
+              value: campaign_coordinators@podkrepi.bg
             - name: IRIS_AGENT_HASH
               valueFrom:
                 secretKeyRef:
