--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -6,7 +6,7 @@ WORKDIR /app
 # prisma generate command which in turn generates the Prisma Client code
 # into the default location `node_modules/.prisma/client`
 RUN yarn set version berry
-RUN yarn add prisma
+RUN yarn add prisma@5.1.1
 COPY schema.prisma .
 COPY migrations migrations/
 
