--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,39 +126,39 @@ jobs:
             ghcr.io/podkrepi-bg/api/seed:master
             ghcr.io/podkrepi-bg/api/seed:${{ env.VERSION }}
 
-  scan-manifests:
-    name: Scan k8s manifests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+  # scan-manifests:
+  #   name: Scan k8s manifests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Install kustomize
-        uses: imranismail/setup-kustomize@v2
+  #     - name: Install kustomize
+  #       uses: imranismail/setup-kustomize@v2
 
-      - name: Build development manifests
-        run: kustomize build manifests/overlays/development > dev-manifests.yaml
+  #     - name: Build development manifests
+  #       run: kustomize build manifests/overlays/development > dev-manifests.yaml
 
-      - name: Scan development manifests with Mondoo
-        uses: mondoohq/actions/k8s-manifest@main
-        env:
-          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
-        with:
-          path: dev-manifests.yaml
+  #     - name: Scan development manifests with Mondoo
+  #       uses: mondoohq/actions/k8s-manifest@main
+  #       env:
+  #         MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
+  #       with:
+  #         path: dev-manifests.yaml
 
-      - name: Build production manifests
-        run: kustomize build manifests/overlays/production > prod-manifests.yaml
+  #     - name: Build production manifests
+  #       run: kustomize build manifests/overlays/production > prod-manifests.yaml
 
-      - name: Scan production manifests with Mondoo
-        uses: mondoohq/actions/k8s-manifest@main
-        env:
-          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
-        with:
-          path: prod-manifests.yaml
+  #     - name: Scan production manifests with Mondoo
+  #       uses: mondoohq/actions/k8s-manifest@main
+  #       env:
+  #         MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
+  #       with:
+  #         path: prod-manifests.yaml
 
   release-dev:
     name: Release to dev
     runs-on: ubuntu-latest
-    needs: [build-api-docker-image, build-migrations-docker-image, scan-manifests]
+    needs: [build-api-docker-image, build-migrations-docker-image]
     environment:
       name: dev
       url: https://dev.podkrepi.bg/swagger
