--- a/.github/workflows/security-checks.yml
+++ b/.github/workflows/security-checks.yml
@@ -52,31 +52,31 @@ jobs:
         with:
           image: ghcr.io/podkrepi-bg/api/migrations:pr
 
-  scan-manifests:
-    name: Scan k8s manifests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+  # scan-manifests:
+  #   name: Scan k8s manifests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Install kustomize
-        uses: imranismail/setup-kustomize@v2
+  #     - name: Install kustomize
+  #       uses: imranismail/setup-kustomize@v2
 
-      - name: Build development manifests
-        run: kustomize build manifests/overlays/development > dev-manifests.yaml
+  #     - name: Build development manifests
+  #       run: kustomize build manifests/overlays/development > dev-manifests.yaml
 
-      - name: Scan development manifests with Mondoo
-        uses: mondoohq/actions/k8s-manifest@main
-        env:
-          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
-        with:
-          path: dev-manifests.yaml
+  #     - name: Scan development manifests with Mondoo
+  #       uses: mondoohq/actions/k8s-manifest@main
+  #       env:
+  #         MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
+  #       with:
+  #         path: dev-manifests.yaml
 
-      - name: Build production manifests
-        run: kustomize build manifests/overlays/production > prod-manifests.yaml
+  #     - name: Build production manifests
+  #       run: kustomize build manifests/overlays/production > prod-manifests.yaml
 
-      - name: Scan production manifests with Mondoo
-        uses: mondoohq/actions/k8s-manifest@main
-        env:
-          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
-        with:
-          path: prod-manifests.yaml
+  #     - name: Scan production manifests with Mondoo
+  #       uses: mondoohq/actions/k8s-manifest@main
+  #       env:
+  #         MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
+  #       with:
+  #         path: prod-manifests.yaml
