--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "class-validator": "0.14.0",
     "exceljs": "4.3.0",
     "handlebars": "4.7.7",
-    "helmet": "5.0.2",
+    "helmet": "^7.1.0",
     "joi": "17.6.0",
     "keycloak-connect": "21.0.1",
     "luxon": "^3.3.0",
