--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.369.0",
-    "@golevelup/nestjs-stripe": "0.6.0",
-    "@golevelup/nestjs-webhooks": "0.2.14",
+    "@golevelup/nestjs-stripe": "^0.8.0",
+    "@golevelup/nestjs-webhooks": "^0.2.18",
     "@keycloak/keycloak-admin-client": "18.0.0",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/cache-manager": "^2.0.1",
