chore: Bump stripe to 15.7.0

--- a/.env
+++ b/.env
@@ -75,6 +75,9 @@ SENDGRID_CONTACTS_URL=/v3/marketing/contacts
 ############
 STRIPE_SECRET_KEY=stripe-secret-key
 STRIPE_WEBHOOK_SECRET=stripe-webhook-secret
+## STRIPE TEST MODE ##
+######################
+STRIPE_WEBHOOK_SECRET_TEST=stripe-webhook-secret
 
 ## Paypal ##
 ############
