--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,11 @@ SEND_MARKETING_NOTIFICATIONS=
 STRIPE_SECRET_KEY=stripe-secret-key
 STRIPE_WEBHOOK_SECRET=stripe-webhook-secret
 
+## STRIPE TEST MODE ##
+######################
+STRIPE_WEBHOOK_SECRET_TEST=stripe-webhook-secret
+
+
 ## Paypal ##
 ############
 PAYPAL_URL=https://api-m.sandbox.paypal.com
