feature: init campaign application controller
- add controller using nest generator
- add tests for the initial controller methods
- add @podkrepi-bg/testing module and autoSpy exported from it

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@podkrepi-bg/podkrepi-types": ["libs/podkrepi-types/src/index.ts"]
+      "@podkrepi-bg/podkrepi-types": ["libs/podkrepi-types/src/index.ts"],
+      "@podkrepi-bg/testing": ["libs/testing/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
