--- a/.env.example
+++ b/.env.example
@@ -107,3 +107,7 @@ CAMPAIGN_ADMIN_MAIL=responsible for campaign management
 ## Cache ##
 ##############
 CACHE_TTL=30000
+
+## AdminEmail ##
+##############
+CAMPAIGN_COORDINATOR_EMAIL=campaign_coordinators@podkrepi.bg
