fix: wrong link when applying for campaign
- fix the organizer edit link in the email notification for a new campaign
- fix the admin edit link in the email notification for a new campaign

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,8 @@
   },
   "postStartCommand": "yarn",
   "extensions": [
+    "ms-azuretools.vscode-docker",
+    "nrwl.angular-console",
     "esbenp.prettier-vscode",
     "firsttris.vscode-jest-runner",
     "dbaeumer.vscode-eslint",
