fix: update the text for the campaign application
- create - show text that does not confirm campaign creation rather speaks about application for a campaign and further details required
- following up on discussion https://discord.com/channels/778984868146577458/1136685006908035092/1307348393521057792
- and texts from https://docs.google.com/document/d/1uZXrVxPKHo9PkMrEE9oIBixO8IGWxbYGBkxlqIJJwck/edit?tab=t.0

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,19 @@
       "rules": {}
     },
     {
+      "files": ["*.spec.ts"],
+      "extends": ["plugin:@nrwl/nx/typescript"],
+      "rules": {
+        "no-restricted-syntax": [
+          "error",
+          {
+            "message": "Do you really need to write file to disk in a test?",
+            "selector": "[name=writeFileSync], [name=writeFile]"
+          }
+        ]
+      }
+    },
+    {
       "files": ["*.js", "*.jsx"],
       "extends": ["plugin:@nrwl/nx/javascript"],
       "rules": {}
