--- a/.env
+++ b/.env
@@ -111,3 +111,5 @@ CACHE_TTL=30000
 ## AdminEmail ##
 ##############
 CAMPAIGN_COORDINATOR_EMAIL=campaign_coordinators@podkrepi.bg
+
+PG_API_KEY=very-secret-password
