feat: Send email upon company registration to company donations team

--- a/.env
+++ b/.env
@@ -111,3 +111,4 @@ CACHE_TTL=30000
 ## AdminEmail ##
 ##############
 CAMPAIGN_COORDINATOR_EMAIL=campaign_coordinators@podkrepi.bg
+CORPORATE_DONORS_EMAIL=
