add corporate donors email
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -243,3 +243,5 @@ spec:
                   key: webhook-id
             - name: CACHE_TTL
               value: '60000'
+            - name: CORPORATE_DONORS_EMAIL
+              value: csr@podkrepi.bg
