update config for digital ocean setup
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/manifests/overlays/development/manual/keycloak-config.patch.yaml
+++ b/manifests/overlays/development/manual/keycloak-config.patch.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: keycloak-config
 data:
-  url: https://keycloak-dev.podkrepi.bg
+  url: https://keycloak-do.podkrepi.bg
   realm: webapp-dev
