--- a/manifests/overlays/production/manual/keycloak-config.patch.yaml
+++ b/manifests/overlays/production/manual/keycloak-config.patch.yaml
@@ -4,4 +4,4 @@ metadata:
   name: keycloak-config
 data:
   realm: webapp
-  url: https://keycloak-dev.podkrepi.bg
+  url: https://keycloak-do.podkrepi.bg
