fix: Add CAMPAIGN_COORDINATOR_EMAIL env to deployment config

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -245,3 +245,5 @@ spec:
               value: '60000'
             - name: CORPORATE_DONORS_EMAIL
               value: csr@podkrepi.bg
+            - name: CAMPAIGN_COORDINATOR_EMAIL
+              value: campaign_coordinators@podkrepi.bg
